--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: iamqbao/gau_assistant:latest
+          tags: iamqbao/financial_assistant_gau:latest
 
       - name: Trigger deployment via SSH
         uses: appleboy/ssh-action@master
@@ -39,5 +39,5 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd ~/gau_assistant
+            cd ~/services/financial_assistant_gau
             sh start.sh
